hphp/test/zend/good/ext/gd/tests/bug41442.php.skipif
<?php 
	if (!extension_loaded('gd')) {
		die("skip gd extension not available.");
	}
	if (!function_exists("imagegd2")) {
		die("skip GD2 support unavailable");
	}
?>